--- a/GladiatorsGame/TODO.txt
+++ b/GladiatorsGame/TODO.txt
@@ -1,6 +1,5 @@
-﻿TODO:
+﻿Features:
  - [DONE] Implement title screen
- - [DONE] Fix Random
  - [DONE] Implement turns (and fix enemy attack on incorrect player input)
  - [DONE] Implement random chance check (percentage)
  - [DONE] Add color coding for combat log
@@ -8,14 +7,17 @@
  - [DONE] Implement skill unlock on levels 3, 5 and 7
  - [DONE] Implement skill scaling with strength
  - [DONE] Implement ending after level 100
- - [DONE] Fix variable names.
  - [DONE] Implement additional skills (+ states)
  - [DONE] Implement skill costs
  - [DONE] Add damage numbers to the skill panel
  - [DONE] Implement enemy scaling
- - fix random
  - Implement enemy affixes
  - Write tutorial for title screen
- - Add multiple death strings for enemies.
+ - Add multiple death strings for enemies
+
+Bugs:
+ - [DONE] Fix Random
+ - [DONE] Fix variable names.
+ - [DONE] Switch to static Random
  - Implement proper pauses with timers, not Threading.Sleep
- - fix bug where holding down button makes the game play itself
+ - Fix bug where holding down button makes the game play itself
