implemented random enemy death text

--- a/GladiatorsGame/TODO.txt
+++ b/GladiatorsGame/TODO.txt
@@ -13,7 +13,8 @@
  - [DONE] Implement enemy scaling
  - Implement enemy affixes
  - [DONE] Write tutorial for title screen
- - Add multiple death strings for enemies
+ - [DONE] Add multiple death strings for enemies
+ - Add multiple entrance strings for enemies
 
 Bugs:
  - [DONE] Fix Random
